<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="ST_ERROR" Id="{8f8f9496-fce9-4bb0-b8ee-f9ba713f7871}">
    <Declaration><![CDATA[(* STRUCT used to contain error status information. *)
{attribute 'enable_dynamic_creation'}
TYPE ST_ERROR :
STRUCT
	bSTATUS : BOOL; 		// Indicates if an error has occurred | TRUE = error, FALSE = no error
	nCODE 	: DINT; 		// Error code specific to the particular error.
	sSOURCE : T_MaxString; 	// Textual information describing the error.
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>