<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="ST_NODE" Id="{ae72523c-b4d2-4bc3-a909-213c887bca25}">
    <Declaration><![CDATA[{attribute 'enable_dynamic_creation'}
TYPE ST_NODE:
STRUCT
	Data 	: __SYSTEM.AnyType; 							// Stored data.
	sData 	: T_MaxString; 									// Data converted to string.
	pNext 	: POINTER TO ST_NODE := Tc3_Module.GVL.NULL; 	// Pointer to next node. (DEFAULT: NULL pointer)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>